--- a/HTML5/body-head-title.html
+++ b/HTML5/body-head-title.html
@@ -8,7 +8,7 @@
 	</body>
 </html>
 
-/*The HTML code (in blue) is made up of characters that live inside angled
+/*The HTML code (in blue/and other color depending on editor) is made up of characters that live inside angled
 brackets — these are called HTML elements*/
 /* Elements are usually
 made up of two tags: an opening tag and a closing tag*/
