--- a/HTML5/body-head-title.html
+++ b/HTML5/body-head-title.html
@@ -1,9 +1,8 @@
 <html> /*The opening <html> tag indicates that anything between it and a closing </html> tag is HTML code*/
 	<head>
 		<title>This is the Title of the Page</title>
-	</head>
-	<body> /*The <body> tag indicates that anything between it and the closing
-</body> tag should be shown inside the main browser window.*/
+	</head> /*This contains information about the page*/ 
+	<body> /*Everything inside this element is shown inside the main browser window.*/
 		<h1>This is the Body of the Page</h1> /*Words between <h1> and </h1> are a main heading.*/
 		<p>Anything within the body of a web page is displayed in the main browser window.</p>
 	</body>
